--- a/config/config.ini
+++ b/config/config.ini
@@ -33,7 +33,7 @@ isClear = 1
 [email]
 Smtp_Server = smtp.126.com
 Smtp_Sender = 1223871051@qq.com
-Smtp_Sender_Password = zzcliang11
+Smtp_Sender_Password = july401
 Smtp_Receiver = zhangzichaoxxxx@gmail.com;476273837xxxx@qq.com;zhangzichao11xxxx@126.com
 
 
