--- a/pytest.ini
+++ b/pytest.ini
@@ -2,13 +2,16 @@
 #   命令行参数
 addopts = -svx
 
-#   搜索文件名
+#   搜索文件名、类名、函数名
 python_files = Test*.py
-#   搜索的类名
 python_classes = Test*
-#   搜索的函数名
 python_functions = test*
 
+#   日志相关
+log_cli = 1
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)6s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format=%Y-%m-%d %H:%M:%S
 
 #   mark标记
 markers =
