--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 #   命令行参数
-addopts = -svx
+addopts = -sv
 
 #   搜索文件名、类名、函数名
 python_files = Test*.py
@@ -19,3 +19,4 @@ markers =
     smoke   : marks tests as smoke
     test    : marks tests as test
     core    : marks tests as core
+    specific: marks tests as specific test
