--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 #测试环境配置
 [test_phone]
-platformName = Android
-platformVersion = 9.0.0
+addr =
+implicitly_time = 20
 appPackage = esunny.test
 appActivity = com.esunny.estar.StartActivity
 noReset = true
