--- a/config/config1.ini
+++ b/config/config1.ini
@@ -1,8 +1,8 @@
-# 测试机配置
+#测试环境配置
 [test_phone]
-platformName = Android
-platformVersion = 7
-appPackage = esunny.test
+addr =
+implicitly_time = 20
+appPackage = esunny.estarandroid
 appActivity = com.esunny.estar.StartActivity
 noReset = true
 
@@ -19,7 +19,7 @@ maxBytes = 104857600
 level = 20
 
 
-#测试环境配置
+
 [url]
 #0->test environment 1->Formal environment
 Environmental = 0
@@ -33,7 +33,7 @@ isClear = 1
 [email]
 Smtp_Server = smtp.126.com
 Smtp_Sender = 1223871051@qq.com
-Smtp_Sender_Password = zzcliang11
+Smtp_Sender_Password = july401
 Smtp_Receiver = zhangzichaoxxxx@gmail.com;476273837xxxx@qq.com;zhangzichao11xxxx@126.com
 
 
