1. 新增测试数据

--- a/config/config1.ini
+++ b/config/config1.ini
@@ -1,6 +1,6 @@
 #测试环境配置
 [test_phone]
-addr =
+addr = ef14c21f
 implicitly_time = 20
 appPackage = esunny.estarandroid
 appActivity = com.esunny.estar.StartActivity
